fixed checkbox on mobile

--- a/static/main.css
+++ b/static/main.css
@@ -97,11 +97,10 @@ button:hover {
 input[type=checkbox]
 {
   /* Double-sized Checkboxes */
-  -ms-transform: scale(1.3); /* IE */
-  -moz-transform: scale(1.3); /* FF */
-  -webkit-transform: scale(1.3); /* Safari and Chrome */
-  -o-transform: scale(1.3); /* Opera */
-  padding: 20px;
+  -ms-transform: scale(1); /* IE */
+  -moz-transform: scale(1); /* FF */
+  -webkit-transform: scale(1); /* Safari and Chrome */
+  -o-transform: scale(1); /* Opera */
 }
 
 
@@ -131,14 +130,16 @@ ul li {
   }
 }
 
+@media only screen and (max-width: 600px) {
+  input[type=checkbox],
+  .form-check-inline
+  .form-check-input {
+    width: 5px !important;
+  }
+}
+
 @media screen and (max-width: 500px) {
   .home-screen-container {
     width: 100%;
-  }
-
-  input[type="checkbox"],
-  .form-check-inline,
-  .form-check-input{
-    width: 5px !important;
   }
 }
